# igp_pattern_printer

./: CNAME  Cargo.toml  LICENSE  README.md  build-web.sh
docs/: CNAME  index.html  wasm-99fc490787d17a11.js  wasm-e69f52443302ecff.js  wasm-e69f52443302ecff_bg.wasm
ipp/: Cargo.toml
ipp/src/: lib.rs  row_builder.rs
src/: lib.rs  main.rs  row_builder.rs
tui/: Cargo.toml
tui/src/: main.rs
wasm/: Cargo.toml  index.html  style.css
wasm/src/: main.rs  opfs.rs  svg.rs
