[package]
name = "ipp"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
image = "0.25.1"
implicit-clone = "0.4.9"
itertools = "0.13.0"
ron = "0.8.1"
serde = { version = "1.0.202", features = ["derive"] }
