[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
image = "0.25.5"
ipp = { path = "../ipp" }
send_wrapper = "0.6.0"
wasm-bindgen-futures = { version = "0.4.50", features = ["futures-core"] }
wasm-logger = "0.2.0"
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.3"

