[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
image = "0.25.5"
implicit-clone = "0.4.9"
ipp = { path = "../ipp" }
ron = "0.8.1"
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = { version = "0.4.50", features = ["futures-core"] }
wasm-logger = "0.2.0"
web-sys = "0.3.77"
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-hooks = "0.3.3"

